Mon Mar  4 13:23:16 2002  Akinori MUSHA  <knu@iDaemons.org>

	* ext/extmk.rb.in (dir_config): Sync with mkmf.rb: Fix a bug where
	  --with-xx-{include,lib} is ignored when --with-xx-dir is
	  specified.

Fri Mar  1 23:08:16 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* stable version 1.6.7 released.

Fri Mar  1 11:29:10 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/socket/{addinfo.h,getaddrinfo.c} (gai_strerror): add const
	  qualifier only for uClibc.

Wed Feb 27 16:30:50 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* st.c (st_init_table_with_size): num_bins should be prime numbers
	  (no decrement).

	* st.c (rehash): ditto.

Wed Feb 27 13:18:49 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* io.c (READ_DATA_PENDING): uClibc support.

	* random.c (rand_init): ditto.

	* ext/socket/{addinfo.h,getaddrinfo.c} (gai_strerror): ditto.

Wed Feb 27 07:08:16 2002  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/sha2/sha2.c: Merge from rough.  Fix a couple of
	  off-by-one errors in Aaron Gifford's code.

	  Obtained from:  KAME via FreeBSD
	  KAME PR:        393
	  FreeBSD PR:     kern/34242

Tue Feb 26 21:36:01 2002  Usaku Nakamura <usa@ruby-lang.org>

	* bignum.c (rb_big_2comp): void function cannot return any value.

Tue Feb 26 16:52:12 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_f_missing): NoMethod error messages for true, false,
	  nil must respond visibility like for other objects.

Tue Feb 26 11:25:50 2002  akira yamada  <akira@arika.org>

	* lib/uri/generic.rb: merge0 shuld return [oth, oth] if oth is
	  absolute URI. 

	* lib/uri/generic.rb: registry part must not be allowed for any
	  schemes for the Internet. (RFC2396, section 3.2.2 and 3.2.1.) 

Mon Feb 25 21:28:46 2002  Akinori MUSHA  <knu@iDaemons.org>

	* ext/syslog/syslog.c: Merge from rough.  Turn Syslog into a
	  module keeping backward compatibility intact.

Mon Feb 25 19:35:48 2002  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>
