@@ -964,7 +964,7 @@ NtCmdGlob (NtCmdLineElement *patt)
     for (p = buf; *p; p = CharNext(p))
 	if (*p == '\\')
 	    *p = '/';
-    rb_iglob(buf, insert, (VALUE)&listinfo);
+    rb_iglob(buf, (void (*) _((const char*, VALUE)))insert, (VALUE)&listinfo);
     if (buf != buffer)
 	free(buf);
 
